# squash_the_creeps-rs

./: .gitignore  Cargo.toml  Main.gd  Main.gdns  Main.tscn  Mob.gd  Mob.gdns  Mob.tscn  Player.gdns  Player.tscn  README.md  ScoreLabel.gdns  project.godot  squash_the_creeps.gdnlib
src/: lib.rs  main_scene.rs  mob.rs  player.rs  score_label.rs
