[package]
name = "squash_the_creeps"
version = "0.1.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
#gdnative = "0.9.3"
#gdnative = { git = "https://github.com/godot-rust/godot-rust" }
gdnative = { path = "../godot-rust/gdnative" }
rand = "0.8.3"