[package]
name = "squash_the_creeps"
version = "0.1.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
#gdnative = { git = "https://github.com/godot-rust/godot-rust" }
gdnative = { git = "https://github.com/robmikh/godot-rust", branch = "issue751" }